--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Shoutouts for Ally!</title>
+    <title>Shoutouts for Sriya!</title>
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Cinzel|Darker+Grotesque|Lemon|Montserrat|Muli|Open+Sans+Condensed:300|Oswald|Poppins|Source+Sans+Pro|Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="main">
-      <h1> Shoutouts for Ally!</h1>
+      <h1> Shoutouts for Sriya!</h1>
       <video autoplay loop muted width="800" height="auto" name="Hat Flip" src="./assets/flip.mov"></video>
       <h2> What I appreciate about you is... </h2>
       <div class="container" id="shoutout-container">
